.devcontainer/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 50052 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/i/api/" }
                route:
                  prefix_rewrite: "/"
                  cluster: interop_service
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
                  cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-grpc-test-echo-initial,x-grpc-test-echo-trailing-bin,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                    max_age: "1728000"
                    expose_headers: x-grpc-test-echo-initial,x-grpc-test-echo-trailing-bin,grpc-status,grpc-message
              - match: { prefix: "/i/apig/" }
                route:
                  prefix_rewrite: "/"
                  cluster: interop_service_gateway
                  cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: content-type,authorization
                    allow_credentials: true
                    max_age: "1728000"
              - match: { prefix: "/i/oauth/" }
                request_headers_to_add: 
                  - header: {key: X-Envoy-Origin, value: /i/oauth}
                route:
                  prefix_rewrite: "/"
                  host_rewrite_header: "/i/oauth"
                  cluster: interop_oauth2
                  cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: authorization
                    max_age: "1728000"


          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: interop_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_0
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: empty-news
                    port_value: 50051
  - name: interop_service_gateway
    connect_timeout: 0.25s
    type: logical_dns
    # http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_1
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: empty-news
                    port_value: 50061
  - name: interop_oauth2
    connect_timeout: 0.25s
    type: logical_dns
    # http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_2
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: empty-news
                    port_value: 9096
